testsuite/veronac/resolution/compile-fail/unknown-symbol.out/stderr.txt
unknown-symbol.verona:5:6: error: Cannot find value for symbol 'Foo'
  f: Foo;
     ^~~
unknown-symbol.verona:8:11: error: Cannot find value for symbol 'Bar'
  main(): Bar {
          ^~~
unknown-symbol.verona:10:5: error: Cannot find value for symbol 'baz'
    baz
    ^~~
3 errors generated
